packages/aces-amf-lib/tests/Generated_Samples_AMF/valid_AMFs/32_aces_1_3_p3_hdr.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>ACES 1.3 HDR Cinema Pipeline</aces:description>
        <aces:author>
            <aces:name>HDR Colorist</aces:name>
            <aces:emailAddress>hdr@postfacility.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:de115399-2789-4b2d-b609-8a764abb6b2a</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>HDR Mastering for P3 D65 ST.2084 - ACES 1.3</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:78540c0e-ffd2-4636-b5bc-b440666cf621</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>1</aces:majorVersion>
                <aces:minorVersion>3</aces:minorVersion>
                <aces:patchVersion>0</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:inputTransform applied="false">
            <aces:description>Sony Venice S-Log3/S-Gamut3 to ACES2065-1</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v1.5:IDT.Sony.Venice_SLog3_SGamut3.a1.v1</aces:transformId>
        </aces:inputTransform>
        <aces:lookTransform applied="false">
            <aces:description>ACES Gamut Compress</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v1.5:LMT.Academy.GamutCompress.a1.3.0</aces:transformId>
        </aces:lookTransform>
        <aces:lookTransform applied="false">
            <aces:description>HDR Grade in ACEScct</aces:description>
            <aces:cdlWorkingSpace>
                <aces:toCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACES_to_ACEScct.a1.0.3</aces:transformId>
                </aces:toCdlWorkingSpace>
                <aces:fromCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACEScct_to_ACES.a1.0.3</aces:transformId>
                </aces:fromCdlWorkingSpace>
            </aces:cdlWorkingSpace>
            <cdl:ASC_SOP>
                <cdl:Slope>1.08 1.02 0.96</cdl:Slope>
                <cdl:Offset>0.0 0.0 0.0</cdl:Offset>
                <cdl:Power>1.0 1.0 1.0</cdl:Power>
            </cdl:ASC_SOP>
            <cdl:ASC_SAT>
                <cdl:Saturation>1.05</cdl:Saturation>
            </cdl:ASC_SAT>
        </aces:lookTransform>
        <aces:outputTransform applied="false">
            <aces:description>P3 D65 ST.2084 108 nit (RRTODT)</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v1.5:RRTODT.Academy.P3D65_108nits_7point2nits_ST2084.a1.1.0</aces:transformId>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
